<resources>
    <string name="app_name" translatable="false">Experimental Features Poc</string>
    <string name="permission_required" translatable="false">Camera access is required to display the camera preview.</string>
    <string name="ok" translatable="false">OK</string>
    <string name="permission_granted" translatable="false">Permission is granted. You can use the camera now.</string>

    <string name="facebook_app_id" translatable="false">1776301049426673</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1776301049426673</string>
    <string name="sample_txt">This is the Sample text Just to Show case how Locales Work.</string>
    <string name="rb_txt_hin">Select Hindi</string>
    <string name="rb_txt_tel">Select Telugu</string>
    <string name="rb_txt_eng">Select English</string>
    <string name="change_language">Change Language</string>
    <string name="fan_off" translatable="false">off</string>
    <string name="fan_low" translatable="false">1</string>
    <string name="fan_medium" translatable="false">2</string>
    <string name="fan_high" translatable="false">3</string>
    <string name="search_bar_hint" translatable="false">search area, street name, location</string>

</resources>