<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocaleShowCaseActivity">

    <TextView
        android:id="@+id/tv_sample_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/sample_txt"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rg_lang_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sample_txt">


        <RadioButton
            android:id="@+id/rb_hindi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_txt_hin"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rb_telugu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_txt_tel"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rb_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_txt_eng"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_change_lang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/change_language"
        app:layout_constraintTop_toBottomOf="@id/rg_lang_selection" />

    <!--edittext with dashes-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/btn_change_lang"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:letterSpacing="0.06"
            android:visibility="gone"
            android:textColor="@color/black"
            />


    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/ll_dashed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/tl_input"
        app:layout_constraintTop_toTopOf="@id/tl_input"
        app:layout_constraintBottom_toBottomOf="@id/tl_input"
        android:layout_marginTop="18dp"
        android:layout_marginStart="18dp" />


</androidx.constraintlayout.widget.ConstraintLayout>